--- a/resources/style.css
+++ b/resources/style.css
@@ -1,20 +1,19 @@
-header{
-  display: flex;
-  align-items: center;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 80px;
-  border-bottom: 1px solid black;
-  background-color: white;
-  font-family: verdana, sans-serif;
-  font-size: 14px;
-  font-weight: bold;
+/* Universal Styles */
+
+body {
+  margin: 0;
+  font-family: "Georgia", serif;
+  font-size: 17px;
+  color: black;
 }
 
-.logo{
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-  padding-left: 30px;
+a {
+  color: black;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 30px;
+  font-weight: bold;
 }
